--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,14 @@
     "objectscript.conn": {
         "active": true,
         "server": "test",
-        "ns": "r4FHIRnamespace"
+        "ns": "Test"
     },
     "intersystems.servers": {
         "test":{
             "webServer": {
                 "scheme": "http",
                 "host": "127.0.0.1",
-                "port": 52778
+                "port": 62773
             },
             "username": "SuperUser"
         },
@@ -38,5 +38,20 @@
             "description": "Connection to local InterSystems Ensemble installed with default settings."
         },
         "/default": "default~iris"
-    }
+    },
+    "sqltools.connections": [
+        {
+            "namespace": "test",
+            "connectionMethod": "Server and Port",
+            "showSystem": false,
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 62773,
+            "https": false,
+            "askForPassword": true,
+            "driver": "InterSystems IRIS",
+            "name": "test",
+            "username": "SuperUser"
+        }
+    ]
 }
